[gd_scene load_steps=4 format=3 uid="uid://bg37ibp46t7l1"]

[ext_resource type="Script" uid="uid://cpvys4wo58o3c" path="res://scenes/UI/player_UI/player_ui.gd" id="1_tfuxa"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rhugi"]
bg_color = Color(0.9411765, 0.023529412, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tfuxa"]
bg_color = Color(0.9490196, 0.95686275, 0, 1)

[node name="Player_UI" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_tfuxa")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
offset_right = 400.0
offset_bottom = 100.0
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 25

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="HealthBar" type="ProgressBar" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/fill = SubResource("StyleBoxFlat_rhugi")
step = 1.0
value = 50.0
rounded = true

[node name="ExpBar" type="ProgressBar" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/fill = SubResource("StyleBoxFlat_tfuxa")
value = 75.0
